--- a/code/index.html
+++ b/code/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Tree test</title>
-<link rel="stylesheet" type="text/css" href="js/skin-win8/ui.fancytree.min.css">
-<script type="text/javascript" src="js/jquery/jquery-3.1.1.min.js" language="javascript"></script>
-<script type="text/javascript" src="js/jquery.fancytree-all-deps.min.js"></script>
-<script type="text/javascript" src="js/jquery.fancytree.wide.js"></script>
-<script type="text/javascript" src="js/jquery.ariatree.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="js/ui.fancytree.css">
+    <script type="text/javascript" src="js/jquery-3.4.1.js" language="javascript"></script>
+    <script type="text/javascript" src="js/jquery.fancytree-all-deps.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
+
+    <link rel="stylesheet"
+        href="//cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.2.3/jquery.contextMenu.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.2.3/jquery.contextMenu.min.js" />
+    <script src="js/jquery.fancytree.filter.js"></script>
+    <script src="js/jquery.fancytree.clones.js"></script>
+    <script src="js/jquery.fancytree.dnd.js"></script>
+    <script src="js/jquery.fancytree.edit.js"></script>
+    <script type="text/javascript" src="./007_fancytree.js"></script>
 </head>
+
 <body>
-
-
-<script type="text/javascript" src="001_fancytree.js">
-</script>
 </body>
+
 </html>
